--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -1234,7 +1234,7 @@ a:focus {
  * ---------------
  */
 .form-control {
-  border-radius: 0;
+  border-radius: 3px;
   box-shadow: none;
   border-color: #d2d6de;
 }
